[project]
name = "automind-openenv"
version = "1.0.0"
description = "Automotive diagnosis and autonomous-control benchmark environment for OpenEnv."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.135.3",
  "numpy==2.2.6",
  "openai==1.79.0",
  "openenv>=0.2.0",
  "pydantic==2.12.5",
  "requests==2.32.3",
  "uvicorn==0.42.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
